--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -39,18 +39,18 @@
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\BouncyCastle.Crypto.dll</HintPath>
+      <HintPath>..\..\Capstone\CcnSession\bin\Release\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="CcnSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\source\repos\Capstone\CcnSession\bin\Release\CcnSession.dll</HintPath>
+      <HintPath>..\..\Capstone\CcnSession\bin\Release\CcnSession.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.16.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MySql.Data.dll</HintPath>
+      <HintPath>..\..\Capstone\CcnSession\bin\Release\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel" />
@@ -176,6 +176,9 @@
     <Content Include="images\lock.png" />
     <Content Include="images\user.png" />
     <None Include="Resources\logo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
