--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,10 @@ PublishScripts/
 **/packages/*
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
+# except our custom dlls we need for our project
+!**packages/BouncyCastle.Crypto.dll
+!**packages/MySql.Data.dll
+!**packages/CcnSession.dll
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 # NuGet v3's project.json files produces more ignoreable files
