--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -84,6 +84,12 @@
     <Compile Include="ChangePW.Designer.cs">
       <DependentUpon>ChangePW.cs</DependentUpon>
     </Compile>
+    <Compile Include="OrdersDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OrdersDetails.Designer.cs">
+      <DependentUpon>OrdersDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Resources\universalFunctions.cs" />
     <Compile Include="UpdateEmployee.cs">
       <SubType>Form</SubType>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OrderReviewForm.resx">
       <DependentUpon>OrderReviewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OrdersDetails.resx">
+      <DependentUpon>OrdersDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
