--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>login</RootNamespace>
     <AssemblyName>Capstone Flowers</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -191,8 +191,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BouncyCastle.Crypto.dll" />
+    <Content Include="CcnSession.dll" />
+    <Content Include="Google.Protobuf.dll" />
     <Content Include="images\lock.png" />
     <Content Include="images\user.png" />
+    <Content Include="MySql.Data.dll" />
     <None Include="Resources\logo.PNG" />
   </ItemGroup>
   <ItemGroup>
