Bigger size, upsated forms, Enter key

--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -39,14 +39,14 @@
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Capstone\CcnSession\bin\Release\BouncyCastle.Crypto.dll</HintPath>
+      <HintPath>..\Additional Files\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="CcnSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Capstone\CcnSession\bin\Release\CcnSession.dll</HintPath>
+      <HintPath>..\Additional Files\CcnSession.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
-      <HintPath>..\packages\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
+      <HintPath>..\Additional Files\Google.Protobuf.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.16.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -203,6 +203,11 @@
     <Content Include="images\lock.png" />
     <Content Include="images\user.png" />
     <Content Include="MySql.Data.dll" />
+    <None Include="Resources\Loginbackground1.png" />
+    <None Include="Resources\Loginbackground.png" />
+    <None Include="Resources\Pass.png" />
+    <None Include="Resources\passw.jpg" />
+    <None Include="Resources\Username.png" />
     <None Include="Resources\previous_blue.png" />
     <None Include="Resources\close.png" />
     <None Include="Resources\logo.PNG" />
