--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -200,6 +200,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CcnSession.dll" />
     <Content Include="images\lock.png" />
     <Content Include="images\user.png" />
     <Content Include="MySql.Data.dll" />
