--- a/login/CapstoneFlowers.csproj
+++ b/login/CapstoneFlowers.csproj
@@ -72,7 +72,7 @@
     </Reference>
     <Reference Include="CcnSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Capstone\CcnSession\bin\Release\CcnSession.dll</HintPath>
+      <HintPath>..\Additional Files\CcnSession.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\Additional Files\Google.Protobuf.dll</HintPath>
